fixed bug with text overflowing /dashboard

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -292,6 +292,9 @@ body {
 }
 
 .subject_title{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
     background: #31dbf6;
     text-align: center;
     font-size: 30px;
